# identity-access-management

./: .gitignore  DEPLOYMENT_GUIDE.md  ENHANCEMENT_SUGGESTIONS.md  PROJECT_REQUIREMENTS.md  PROJECT_SUMMARY.md  README.md  create-submission-zip.sh  criar_usuarios.sh  criar_usuarios_auth0.py  setup.sh
.github/workflows/: sync-branches.yml
backend/: RBAC_ENHANCEMENT.md  README.md  README_AUTH0_JSON.md  auth0_users_template.json  env.template  get_auth0_token.sh  pyproject.toml  pytest.ini  requirements.txt  setup_auth0.py  start_server.sh  test_config.py  update_postman_auth.py
backend/src/: api.py
backend/src/auth/: auth.py
backend/src/database/: models.py
backend/tests/: README.md  __init__.py  conftest.py  test_api.py  test_auth.py
docs/: ACESSAR_AUTH0_DASHBOARD.txt  ADICIONAR_CALLBACK_URL.md  AGORA_FAZER.txt  API_IMPLEMENTATION.md  ATRIBUIR_ROLE_USUARIO_ATUAL.txt  AUTORIZAR_CLIENT_GRANT.txt  BACKEND_FUNCIONANDO.md  BEST_PRACTICES.md  CALLBACK_URL_CORRETO.txt  COMO_CONFIGURAR.md  COMO_FINALIZAR_FRONTEND.txt  CONFIGURACAO_PROJETO.md  CONFIGURAR_CALLBACK_AUTH0.md  CONFIGURAR_M2M_PASSO_A_PASSO.txt  CORRECAO_FINAL_AUTH0.md  CORRIGIR_APPLICATION_TYPE.md  CORRIGIR_AUTH0.md  CRIAR_SPA_AUTH0.txt  CRIAR_USUARIOS_AUTH0.md  EXECUTAR_TUDO.txt  EXECUTION_ROADMAP.md  FAZER_LOGOUT_E_LOGIN.txt  FINALIZAR_FRONTEND.md  FRONTEND_CONFIGURADO.txt  FRONTEND_SETUP.md  FUNCIONANDO.txt  GUIA_COMPLETO.md  IMPORTANTE_SPA.md  INICIAR_BACKEND.md  INICIO_RAPIDO.md  INSTALACAO_TESTE.md  INSTALAR_IONIC.md  INSTRUCOES_ENVIO.md  LOGIN_AUTH0.md  MANUAL_TESTE_COMPLETO.md  ORDEM_EXECUCAO.txt  ORGANIZACAO_FINAL.md  PASSO_A_PASSO_FRONTEND.md  PROBLEMA_APOS_ADICIONAR_DRINK.md  PROJETO_COMPLETO.md  (+30 more)
docs/backend/: AUTH0_MFA_SETUP.md  AUTH0_PASSO_A_PASSO.md  AUTH0_SETUP.md  POSTMAN_SETUP_SUMMARY.md  TESTING_GUIDE.md
frontend/: UI_ENHANCEMENTS.md
frontend/src/app/services/: auth.service.ts
frontend/src/environments/: environment.ts
