[project]
name = "coffee-shop-backend"
version = "0.1.0"
description = "Coffee Shop Full Stack Backend - IAM Final Project"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.0.0",
    "Flask-SQLAlchemy==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "Flask-Cors==3.0.8",
    "SQLAlchemy==1.4.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

